<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintBottom_toTopOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeGreetingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/concertone"
                android:text="Hello,"
                android:textColor="@color/black"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/concertone"
                android:text="username"
                android:textColor="@color/black"
                android:textSize="30dp"
                app:layout_constraintStart_toEndOf="@id/recipeGreetingTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipeAskTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:fontFamily="@font/abel"
                android:text="Do you want to cook something?"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeGreetingTextView" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/recipeProfileImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/baseline_person_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop" />


            <RadioGroup
                android:id="@+id/radio_group_mealtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipeProfileImageView">

                <RadioButton
                    android:id="@+id/button_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:drawableStart="@drawable/daily"
                    android:drawablePadding="8dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/alumnisans"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="Daily"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    app:backgroundTint="@null" />

                <RadioButton
                    android:id="@+id/button_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:drawableStart="@drawable/weekly"
                    android:drawablePadding="8dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/alumnisans"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="Weekly"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    app:backgroundTint="@null" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_mealtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group_mealtime">

                <RadioButton
                    android:id="@+id/button_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:drawableStart="@drawable/breakfast"
                    android:drawablePadding="8dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/alumnisans"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="Breakfast"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    app:backgroundTint="@null" />

                <RadioButton
                    android:id="@+id/button_lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:drawableStart="@drawable/lunch"
                    android:drawablePadding="8dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/alumnisans"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="Lunch"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    app:backgroundTint="@null" />

                <RadioButton
                    android:id="@+id/button_dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:drawableStart="@drawable/dinner"
                    android:drawablePadding="8dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/alumnisans"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="Dinner"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    app:backgroundTint="@null" />

            </RadioGroup>

            <TextView
                android:id="@+id/chooseFoodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/concertone"
                android:text="Choose The Food"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group_mealtype" />

            <TextView
                android:id="@+id/noteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:textStyle="bold"
                android:gravity="center"
                android:text="Nutritional Information Provided Per Single Serving"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseFoodTextView"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/breakfastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lunchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dinnerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weeklyRecommendationRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <FrameLayout
        android:id="@+id/selecteditem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_selected"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintBottom_toTopOf="@+id/search_bar">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            app:backgroundTint="@android:color/transparent"
            app:elevation="0dp"
            app:maxImageSize="25dp"
            app:pressedTranslationZ="0dp"
            app:srcCompat="@drawable/selected_item"
            app:tint="@null"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selected Meal"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_gravity="end|center_vertical"
            android:fontFamily="@font/alumnisanssemibold"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </FrameLayout>

    <ImageView
        android:id="@+id/selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        android:src="@drawable/selected_meall"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintBottom_toTopOf="@+id/search_bar" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="search products..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_anchor="@id/search_bar"
        android:inputType="text"
        android:imeOptions="actionSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>